fix border not showing error

--- a/src/Post.css
+++ b/src/Post.css
@@ -1,7 +1,7 @@
 .post {
   max-width: 500px;
   background-color: white;
-  border-color: 1px solid lightgray;
+  border: 1px solid lightgray;
 }
 
 .post__image {
@@ -22,6 +22,6 @@
   padding: 20px;
 }
 
-.post_avatar {
+.post__avatar {
   margin-right: 10px;
 }
